--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
     <div class="container">
       <div>
         <!-- intestazione articolo-->
-        <div class=".margin-default">
+        <div class="margin-default">
           <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
           <div class="main-light-color">
             <div>Scritto da <strong class="author">The Booleaner</strong></div>
-            <div class="article-date">il 10/10/2020</div>
+            <div class="article-date margin-botton">il 10/10/2020</div>
           </div>
         </div>
         <!-- /intestazione articolo-->
         <!-- immagini -->
-        <div class=".margin-default">
+        <div class="margin-default">
           <img src="img/tim-1.jpg" alt="Tim Berners-Lee First Image">
           <img src="img/tim-2.jpg" alt="Tim Berners-Lee Second Image">
-          <div class="caption">
+          <div class="margin-botton caption">
             1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen<br>
             2nd Photo: Wikimedia, by Paul Clarke
           </div>
@@ -43,8 +43,8 @@
         <!-- /immagini -->
 
         <!-- corpo -->
-        <div class=".margin-default">
-          <p class=".margin-default">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
+        <div class="margin-default margin-default">
+          <p class="margin-default">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
             tincidunt ut
             laoreet dolore
             magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud <span class="evidenzio">exerci tation ullamcorper suscipit
@@ -59,7 +59,7 @@
             blandit
             praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
 
-          <ul class="list-items">
+          <ul class="list-items margin-default">
             <li>Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
               laoreet dolore
               magna aliquam erat volutpat.</li>
@@ -74,7 +74,7 @@
 
 
           </ul>
-          <div class=".margin-default">
+          <div class="margin-default">
             <table id="table-content">
               <thead>
                 <tr>
@@ -106,8 +106,8 @@
               </tbody>
             </table>
           </div>
-          <div class=".margin-default">
-            <p class=".margin-default">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
+          <div class="margin-default">
+            <p class="margin-default">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
               tincidunt ut
               laoreet dolore
               magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud <span class="evidenzio">exerci tation ullamcorper suscipit
@@ -124,11 +124,22 @@
         </div>
       </div>
     </div>
+    </div>
 
 
   </main>
 
   <!-- /corpo principale del sito -->
+
+  <!-- Piede del sito -->
+  <footer>
+    <div class="container">
+      <h4 class="main-light-color">Potrebbero interessarti</h4>
+      <div class="box-image" id="image-a">Lorem ipsum dolor</div>
+      <div class="box-image" id="image-b">Lorem ipsum dolor</div>
+    </div>
+  </footer>
+  <!-- /Piede del sito -->
 
 
 
